# ChoopScoop

./: .gitignore  CHANGELOG.md  LICENSE.md  QUICK-START-v2.1.md  README.md  choopscoop_site_auditor_v2.1.py  config.yaml  gitignore  install_v2.1.sh  pyproject.toml  requirements_v2.txt  tag_patterns.py
.claude/skills/audit-report/: SKILL.md
.github/workflows/: ci.yml
choopscoop.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DATA_DICTIONARY.md  DELIVERY-SUMMARY-v2.1.md  PATCH-NOTES-v2.1.md  PIPELINE.md  ROADMAP.md  VERSION-COMPARISON.md
src/choopscoop/: __init__.py  __main__.py  auditor.py  cli.py  patterns.py  wappalyzer_adapter.py
tests/: conftest.py  test_config.py  test_datalayer.py  test_export.py  test_findings.py  test_patterns.py  test_tag_detection.py  test_technology_detection.py  test_url_handling.py  test_wappalyzer_adapter.py
