[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "choopscoop"
version = "3.0.0"
description = "Playwright-powered site auditor and marketing tag detector."
readme = "README.md"
authors = [
    { name = "Jerusha Gray", email = "jerusha.gray@gmail.com" }
]
license = { file = "LICENSE.md" }
keywords = ["web-audit", "crawler", "tag-detection", "martech", "analytics", "playwright"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
]
requires-python = ">=3.9"

dependencies = [
    "playwright>=1.44",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[project.urls]
Homepage = "https://github.com/JerushaGray/ChoopScoop"
Issues = "https://github.com/JerushaGray/ChoopScoop/issues"

[project.scripts]
choopscoop = "choopscoop.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
